src/objects/StayClassy__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Authorization_Token__c</fullName>
        <label>Authorization Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_Url__c</fullName>
        <defaultValue>&quot;http://staging.stayclassy.org&quot;</defaultValue>
        <label>Endpoint Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <label>Organization ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>StayClassy</label>
</CustomObject>